Code refactoring (version 1.4)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -48,7 +48,7 @@
     <string name="loans_list_help">Теперь вы находитесь на экране со списком всех займов, заявки на которые были приняты с этого аккаунта. Для получения дополнительной информации о конкретном займе нажмите на него в списке.</string>
     <string name="loans_list_help_update">Когда вы нажмете на этот значок, вы обновите список.</string>
     <string name="add_new_loan_help">Нажав на этот значок, вы перейдете на другой экран, чтобы подать заявку на получение нового займа.</string>
-    <string name="no_cache">Данных в кэше нет</string>
+    <string name="no_data">Данных в кэше нет</string>
     <string name="loan_help">На этом экране вы можете увидеть подробную информацию о выбранном вами кредите, а также информацию о том, где вы можете получить одобренный займ или что делать, если ваша заявка не будет одобрена.</string>
     <string name="contacts">Контакты</string>
     <string name="not_real_bank_email">notrealbank@email.com</string>
